make budget optimizer return the 3 best